--- a/package.json
+++ b/package.json
@@ -20,17 +20,20 @@
   "devDependencies": {
     "@babel/core": "^7.8.6",
     "@babel/preset-env": "^7.8.6",
+    "@babel/preset-typescript": "^7.8.3",
     "autoprefixer": "^9.7.4",
+    "babel-loader": "^8.0.6",
     "browser-sync": "^2.26.7",
     "cssnano": "^4.1.10",
     "gulp": "^4.0.2",
-    "gulp-babel": "^8.0.0",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.0.2",
-    "gulp-typescript": "^6.0.0-alpha.1",
     "node-sass": "^4.13.1",
+    "ts-loader": "^6.2.1",
     "typescript": "^3.8.3",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11",
     "webpack-stream": "^5.2.1"
   },
   "dependencies": {
