--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
+  "files": [
+    "./src/ts/main.ts"
+  ],
   "compilerOptions": {
-    "module": "ES6",
+    "target": "ESNext",
     "lib": [
       "ES5",
       "ES6",
@@ -12,7 +15,6 @@
       "ESNext",
       "DOM",
       "DOM.Iterable",
-      "ScriptHost",
     ]
   }
 }
