Task completion, new tasks and local storage

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "./src/ts/main.ts"
   ],
   "compilerOptions": {
+    "moduleResolution": "Node",
     "target": "ESNext",
     "lib": [
       "ES5",
