--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A to-do app to help you keep up with your goals and projects.",
   "main": "./dist/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy:dist": "git subtree push --prefix dist origin gh-pages"
   },
   "repository": {
     "type": "git",
